--- a/ETL_Mini_Project_JSchuler_HWaters.ipynb
+++ b/ETL_Mini_Project_JSchuler_HWaters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -2130,7 +2130,7 @@
        "999        cat9       subcat24  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2308,7 @@
        "4        cat1        subcat1  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2322,15 +2322,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>backers_count</th>\n",
+       "      <th>country</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>launch_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>subcategory_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>147</td>\n",
+       "      <td>4661</td>\n",
+       "      <td>Baldwin, Riley and Jackson</td>\n",
+       "      <td>Pre-emptive tertiary standardization</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CAD</td>\n",
+       "      <td>2020-02-13</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1175</td>\n",
+       "      <td>2288</td>\n",
+       "      <td>Werner-Bryant</td>\n",
+       "      <td>Virtual uniform frame</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>7991.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>222</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2020-06-20</td>\n",
+       "      <td>2021-01-30</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>873</td>\n",
+       "      <td>2067</td>\n",
+       "      <td>Stewart LLC</td>\n",
+       "      <td>Cloned bi-directional architecture</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>12047.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>113</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2020-11-29</td>\n",
+       "      <td>2021-06-11</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2568</td>\n",
+       "      <td>5989</td>\n",
+       "      <td>Castillo-Carey</td>\n",
+       "      <td>Cross-platform solution-oriented process improvement</td>\n",
+       "      <td>142400.0</td>\n",
+       "      <td>21307.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>296</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2020-05-05</td>\n",
+       "      <td>2021-05-30</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1211</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>Wright, Hartman and Yu</td>\n",
+       "      <td>User-friendly tertiary array</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>12437.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>131</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2021-01-29</td>\n",
+       "      <td>2021-02-13</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cf_id  contact_id                company_name  \\\n",
+       "0    147        4661  Baldwin, Riley and Jackson   \n",
+       "1   1175        2288               Werner-Bryant   \n",
+       "2    873        2067                 Stewart LLC   \n",
+       "3   2568        5989              Castillo-Carey   \n",
+       "4   1211        3307      Wright, Hartman and Yu   \n",
+       "\n",
+       "                                            description      goal  pledged  \\\n",
+       "0                  Pre-emptive tertiary standardization     100.0      0.0   \n",
+       "1                                 Virtual uniform frame    1800.0   7991.0   \n",
+       "2                    Cloned bi-directional architecture    1300.0  12047.0   \n",
+       "3  Cross-platform solution-oriented process improvement  142400.0  21307.0   \n",
+       "4                          User-friendly tertiary array    3300.0  12437.0   \n",
+       "\n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            222      US      USD  2020-06-20  2021-01-30   \n",
+       "2  successful            113      US      USD  2020-11-29  2021-06-11   \n",
+       "3      failed            296      US      USD  2020-05-05  2021-05-30   \n",
+       "4  successful            131      US      USD  2021-01-29  2021-02-13   \n",
+       "\n",
+       "  category_id subcategory_id  \n",
+       "0        cat1        subcat1  \n",
+       "1        cat1        subcat1  \n",
+       "2        cat1        subcat1  \n",
+       "3        cat1        subcat1  \n",
+       "4        cat1        subcat1  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Renaming the DataFrame to campaign_cleaned\n",
     "campaign_cleaned = campaign_merged_df\n",
     "\n",
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)\n",
+    "campaign_cleaned.head()"
    ]
   },
   {
@@ -2342,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2566,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2722,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2608,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2890,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2866,7 +3029,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2881,7 +3044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2910,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
